# technical-interview

./: .env.sample  .gitignore  README.md  explore_data.ipynb  main.py  pyproject.toml  requirements.txt
src/: cli.py  config_loader.py  data.py  logger.py  plotting.py  settings.py  train.py
src/configs/: linear_regression.yaml  sequential_regressor.yaml
src/evaluation/: evaluation.py
src/models/: __init__.py  base.py  sequential.py
src/registry/: base.py  on_disk_registry.py
src/splitters/: base.py  single.py
tests/src/: test_config_loader.py  test_data.py
tests/src/evaluation/: test_evaluation.py
tests/src/splitters/: test_single.py
